{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 31,
  "lineage": "8b1b8830-528d-93df-fdda-101c38f42fe7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "myelb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "abc908",
                "bucket_prefix": "abc908",
                "enabled": true,
                "interval": 5
              }
            ],
            "connection_draining": true,
            "connection_draining_timeout": 100,
            "cross_zone_load_balancing": true,
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "HTTP:80/index.html",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "myelb",
            "idle_timeout": 100,
            "instances": [
              "i-09236e3296d8d503b",
              "i-0b7d3dd0ba1b3a276"
            ],
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "myelb",
            "security_groups": [
              "sg-0eaaea56861c43c80"
            ],
            "subnets": [
              "subnet-01349b023fde30a54",
              "subnet-09462e41ded97bd46",
              "subnet-0b72c67c8c55bc711"
            ],
            "tags": {
              "Name": "terraform-elb"
            }
          },
          "dependencies": [
            "aws_instance.web",
            "aws_security_group.websg",
            "aws_subnet.pubsub",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09558250a3419e7d0",
            "arn": "arn:aws:ec2:us-east-2:415216890706:instance/i-09236e3296d8d503b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09236e3296d8d503b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cf207b20c1ba8361",
            "private_dns": "ip-10-0-0-22.us-east-2.compute.internal",
            "private_ip": "10.0.0.22",
            "public_ip": "13.59.106.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d641bfe0157e57a4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09462e41ded97bd46",
            "tags": {
              "Name": "webvm-[count.index]"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eaaea56861c43c80"
            ]
          },
          "dependencies": [
            "aws_security_group.websg",
            "aws_subnet.pubsub",
            "aws_vpc.mvpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09558250a3419e7d0",
            "arn": "arn:aws:ec2:us-east-2:415216890706:instance/i-0b7d3dd0ba1b3a276",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b7d3dd0ba1b3a276",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c38124723095030b",
            "private_dns": "ip-10-0-0-38.us-east-2.compute.internal",
            "private_ip": "10.0.0.38",
            "public_ip": "18.222.177.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0195cca03e2005d6a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b72c67c8c55bc711",
            "tags": {
              "Name": "webvm-[count.index]"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eaaea56861c43c80"
            ]
          },
          "dependencies": [
            "aws_security_group.websg",
            "aws_subnet.pubsub",
            "aws_vpc.mvpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:415216890706:internet-gateway/igw-06824f58ffe3e9487",
            "id": "igw-06824f58ffe3e9487",
            "owner_id": "415216890706",
            "tags": {
              "Name": "myigw"
            },
            "vpc_id": "vpc-0acbfb1d150870adc"
          },
          "dependencies": [
            "aws_vpc.mvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08e10fa7224229a32",
            "owner_id": "415216890706",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06824f58ffe3e9487",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prt"
            },
            "vpc_id": "vpc-0acbfb1d150870adc"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_vpc.mvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prtassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07dfe22f1fa85789d",
            "route_table_id": "rtb-08e10fa7224229a32",
            "subnet_id": "subnet-09462e41ded97bd46"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.prt",
            "aws_subnet.pubsub",
            "aws_vpc.mvpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013db6ab62213825d",
            "route_table_id": "rtb-08e10fa7224229a32",
            "subnet_id": "subnet-0b72c67c8c55bc711"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.prt",
            "aws_subnet.pubsub",
            "aws_vpc.mvpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034022e8d9b904e42",
            "route_table_id": "rtb-08e10fa7224229a32",
            "subnet_id": "subnet-01349b023fde30a54"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.prt",
            "aws_subnet.pubsub",
            "aws_vpc.mvpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "websg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:415216890706:security-group/sg-0eaaea56861c43c80",
            "description": "websg TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eaaea56861c43c80",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "websg",
            "name_prefix": "",
            "owner_id": "415216890706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "websg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acbfb1d150870adc"
          },
          "dependencies": [
            "aws_vpc.mvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:415216890706:subnet/subnet-09462e41ded97bd46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.16/28",
            "id": "subnet-09462e41ded97bd46",
            "map_public_ip_on_launch": true,
            "owner_id": "415216890706",
            "tags": {
              "Name": "pub-0"
            },
            "vpc_id": "vpc-0acbfb1d150870adc"
          },
          "dependencies": [
            "aws_vpc.mvpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:415216890706:subnet/subnet-0b72c67c8c55bc711",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.32/28",
            "id": "subnet-0b72c67c8c55bc711",
            "map_public_ip_on_launch": true,
            "owner_id": "415216890706",
            "tags": {
              "Name": "pub-1"
            },
            "vpc_id": "vpc-0acbfb1d150870adc"
          },
          "dependencies": [
            "aws_vpc.mvpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:415216890706:subnet/subnet-01349b023fde30a54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.0.48/28",
            "id": "subnet-01349b023fde30a54",
            "map_public_ip_on_launch": true,
            "owner_id": "415216890706",
            "tags": {
              "Name": "pub-2"
            },
            "vpc_id": "vpc-0acbfb1d150870adc"
          },
          "dependencies": [
            "aws_vpc.mvpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:415216890706:vpc/vpc-0acbfb1d150870adc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-08ec78e7d61d5168e",
            "default_route_table_id": "rtb-0f169ee525196f269",
            "default_security_group_id": "sg-07c6a1e67b7bd6798",
            "dhcp_options_id": "dopt-313e5c58",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0acbfb1d150870adc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f169ee525196f269",
            "owner_id": "415216890706",
            "tags": {
              "Name": "prod"
            }
          }
        }
      ]
    }
  ]
}